--- a/packages/jsx-editor/src/stories/Overview.stories.mdx
+++ b/packages/jsx-editor/src/stories/Overview.stories.mdx
@@ -8,8 +8,8 @@ import 'antd/dist/antd.css'
 
 ## 简介
 
-JSX Editor 提供多个 React 组件与 Hooks，读取 React 函数式组件代码，
-通过画布进行所见即所得的可视化编辑并将结果转换为 React 代码。
+JSX Editor 提供多个 React 组件与 Hooks，读取 React 函数式组件代码， 通过画布进行所见即所得的可视化编辑并将结果转换为
+React 代码。
 
 提供一些插件，对于特定语法结构的代码展示相应的交互，如：
 
@@ -27,7 +27,7 @@ map((xs) => <li>{xs}</li>)(data)
 export const todos = [
   {
     title: 'AST 解析与基础转换',
-    percent: 0,
+    percent: 3,
   },
   {
     title: '拖放 UI 组件',
@@ -66,7 +66,7 @@ export const todos = [
   footer={
     <div>
       总进度
-      <Progress percent={5} size="small" />
+      <Progress percent={6} size="small" />
     </div>
   }
 />
